<resources>
    <string name="app_name">COMP3025-Android-Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="outputString">0</string>
    <string name="clearButtonString">AC</string>
    <string name="posNegButtonString">+/-</string>
    <string name="percentButtonString">%</string>
    <string name="divideButtonString">/</string>
    <string name="sevenButtonString">7</string>
    <string name="eightButtonString">8</string>
    <string name="nineButtonString">9</string>
    <string name="multiplyButtonString">x</string>
    <string name="sixButtonString">6</string>
    <string name="fiveButtonString">5</string>
    <string name="fourButtonString">4</string>
    <string name="subtractButtonText">-</string>
    <string name="threeButtonString">3</string>
    <string name="twoButtonString">2</string>
    <string name="oneButtonString">1</string>
    <string name="addButtonString">+</string>
    <string name="zeroButtonString">0</string>
    <string name="decimalButtonString">.</string>
    <string name="calculateButtonString">=</string>
</resources>
